fixed majority of code smells, pushing to re-run on branch